--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "test": "mocha --watch ./util/*.spec.js --compilers js:babel-register"
+  },
   "private": true,
   "dependencies": {
+    "chai": "^4.1.2",
     "expo": "^22.0.0",
+    "mocha": "^4.0.1",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
     "react-navigation": "^1.0.0-beta.19"
