--- a/Time-Me-Server/package.json
+++ b/Time-Me-Server/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chalk": "^2.3.0",
     "nodemon": "^1.14.1"
